; ModuleID = '/home/carl/AnghaBench/linux/net/rds/extr_af_rds.c_rds_wake_sk_sleep.c'
source_filename = "/home/carl/AnghaBench/linux/net/rds/extr_af_rds.c_rds_wake_sk_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_sock = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rds_wake_sk_sleep(%struct.rds_sock* %0) #0 {
  %2 = alloca %struct.rds_sock*, align 8
  %3 = alloca i64, align 8
  store %struct.rds_sock* %0, %struct.rds_sock** %2, align 8
  %4 = load %struct.rds_sock*, %struct.rds_sock** %2, align 8
  %5 = getelementptr inbounds %struct.rds_sock, %struct.rds_sock* %4, i32 0, i32 0
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @read_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.rds_sock*, %struct.rds_sock** %2, align 8
  %9 = call i32 @rds_rs_to_sk(%struct.rds_sock* %8)
  %10 = call i32 @__rds_wake_sk_sleep(i32 %9)
  %11 = load %struct.rds_sock*, %struct.rds_sock** %2, align 8
  %12 = getelementptr inbounds %struct.rds_sock, %struct.rds_sock* %11, i32 0, i32 0
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @read_unlock_irqrestore(i32* %12, i64 %13)
  ret void
}

declare dso_local i32 @read_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__rds_wake_sk_sleep(i32) #1

declare dso_local i32 @rds_rs_to_sk(%struct.rds_sock*) #1

declare dso_local i32 @read_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
